<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_item_1" />
    <item android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_forum"
        android:title="@string/menu_item_2" />
    <item android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_item_3" />
</menu>