<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/image"
        android:icon="@drawable/ic_image"
        android:title="@string/bottom_sheet_file_viewer_image_from_gallery" />

    <item
        android:id="@+id/document"
        android:icon="@drawable/ic_document"
        android:title="@string/bottom_sheet_file_viewer_document_from_gallery" />

    <item
        android:id="@+id/camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/bottom_sheet_file_viewer_image_from_camera" />

</menu>